--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "size": "npm run compile && npx hardhat size-contracts",
     "deploy:governor:sepolia": "npx hardhat run scripts/deploy_reg_governor.ts --network sepolia",
     "deploy:timelock:sepolia": "npx hardhat run scripts/deploy_reg_treasury_dao.ts --network sepolia",
-    "deploy:voting:sepolia": "npx hardhat run scripts/deploy_reg_voting_power.ts --network sepolia"
+    "deploy:voting:sepolia": "npx hardhat run scripts/deploy_reg_voting_power.ts --network sepolia",
+    "deploy:vault:sepolia": "npx hardhat run scripts/deploy_reg_incentive_vault.ts --network sepolia"
   },
   "author": "RealT Inc.",
   "license": "MIT",
