feat: add amount variable to withdraw in incentive vault

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "deploy:governor:sepolia": "npx hardhat run scripts/deploy_reg_governor.ts --network sepolia",
     "deploy:timelock:sepolia": "npx hardhat run scripts/deploy_reg_treasury_dao.ts --network sepolia",
     "deploy:voting:sepolia": "npx hardhat run scripts/deploy_reg_voting_power.ts --network sepolia",
-    "deploy:vault:sepolia": "npx hardhat run scripts/deploy_reg_incentive_vault.ts --network sepolia"
+    "deploy:vault:sepolia": "npx hardhat run scripts/deploy_reg_incentive_vault.ts --network sepolia",
+    "upgrade:governor:sepolia": "npx hardhat run scripts/upgrade_reg_governor.ts --network sepolia",
+    "upgrade:vault:sepolia": "npx hardhat run scripts/upgrade_reg_incentive_vault.ts --network sepolia"
   },
   "author": "RealT Inc.",
   "license": "MIT",
