docs: update docs

--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
     "test": "npx hardhat test",
     "coverage": "npx hardhat coverage",
     "size": "npm run compile && npx hardhat size-contracts",
-    "deploy:governor:sepolia": "npx hardhat run scripts/deploy_reg_governor.ts --network sepolia",
-    "deploy:timelock:sepolia": "npx hardhat run scripts/deploy_reg_treasury_dao.ts --network sepolia",
+    "deployFrame:voting:sepolia": "npx hardhat run scripts/deploy_reg_voting_power_frame.ts --network sepolia",
+    "deployFrame:timelock:sepolia": "npx hardhat run scripts/deploy_reg_treasury_dao_frame.ts --network sepolia",
+    "deployFrame:governor:sepolia": "npx hardhat run scripts/deploy_reg_governor_frame.ts --network sepolia",
+    "deployFrame:vault:sepolia": "npx hardhat run scripts/deploy_reg_incentive_vault_frame.ts --network sepolia",
+    "deployFrame:voting:gnosis": "npx hardhat run scripts/deploy_reg_voting_power_frame.ts --network gnosis",
+    "deployFrame:timelock:gnosis": "npx hardhat run scripts/deploy_reg_treasury_dao_frame.ts --network gnosis",
+    "deployFrame:governor:gnosis": "npx hardhat run scripts/deploy_reg_governor_frame.ts --network gnosis",
+    "deployFrame:vault:gnosis": "npx hardhat run scripts/deploy_reg_incentive_vault_frame.ts --network gnosis",
     "deploy:voting:sepolia": "npx hardhat run scripts/deploy_reg_voting_power.ts --network sepolia",
+    "deploy:timelock:sepolia": "npx hardhat run scripts/deploy_reg_treasury_dao.ts --network sepolia",
+    "deploy:governor:sepolia": "npx hardhat run scripts/deploy_reg_governor.ts --network sepolia",
     "deploy:vault:sepolia": "npx hardhat run scripts/deploy_reg_incentive_vault.ts --network sepolia",
     "upgrade:governor:sepolia": "npx hardhat run scripts/upgrade_reg_governor.ts --network sepolia",
     "upgrade:vault:sepolia": "npx hardhat run scripts/upgrade_reg_incentive_vault.ts --network sepolia"
