--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,34 @@
 # RPC URLs:
-
 MAINNET_RPC_URL=""
 GNOSIS_RPC_URL=""
 POLYGON_RPC_URL=""
+SEPOLIA_RPC_URL=""
 
 # Etherscan verifycation API key: 
-
 ETHERSCAN_API_KEY=""
 GNOSISSCAN_API_KEY=""
 POLYGONSCAN_API_KEY=""
 
+# Set up parameters for the contracts
+# REGVotingPowerRegistry
+VOTING_DEFAULT_ADMIN=""
+VOTING_REGISTER=""
+VOTING_UPGRADER=""
 
+# REGTreasuryDAO
+TIMELOCK_MIN_DELAY=""
+TIMELOCK_DEFAULT_ADMIN=""
+
+# REGGovernor
+GOVERNOR_TOKEN=""
+GOVERNOR_TIMELOCK=""
+GOVERNOR_DEFAULT_ADMIN=""
+
+# REGIncentiveVault
+GOVERNOR_ADDRESS=""
+REG_ADDRESS=""
+INCENTIVE_VAULT_ADMIN=""
+INCENTIVE_VAULT_UPGRADER=""
+INCENTIVE_VAULT_PAUSER=""
 
 PRIVATE_KEY=""
