docs: complete readme and docs

--- a/.env.example
+++ b/.env.example
@@ -19,11 +19,13 @@ VOTING_UPGRADER=""
 TIMELOCK_MIN_DELAY=""
 TIMELOCK_DEFAULT_ADMIN=""
 
+# Deploy timelock (REGTreasuryDAO) then get the address and set it here
 # REGGovernor
 GOVERNOR_TOKEN=""
 GOVERNOR_TIMELOCK=""
 GOVERNOR_DEFAULT_ADMIN=""
 
+# Deploy governor then get the address and set it here
 # REGIncentiveVault
 GOVERNOR_ADDRESS=""
 REG_ADDRESS=""
