feat: add scripts for registering voters

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "coverage": "npx hardhat coverage",
     "size": "npm run compile && npx hardhat size-contracts",
     "fetch": "ts-node utils/fetch-voters.ts",
-    "register": "ts-node utils/register-voters.ts",
+    "register:sepolia": "npx hardhat run scripts/register_voters_incentive_vault.ts --network sepolia",
+    "register:frame:sepolia": "npx hardhat run scripts/register_voters_incentive_vault_frame.ts --network sepolia",
+    "register-utils": "ts-node utils/register-voters.ts",
     "deployFrame:voting:sepolia": "npx hardhat run scripts/deploy_reg_voting_power_frame.ts --network sepolia",
     "deployFrame:timelock:sepolia": "npx hardhat run scripts/deploy_reg_treasury_dao_frame.ts --network sepolia",
     "deployFrame:governor:sepolia": "npx hardhat run scripts/deploy_reg_governor_frame.ts --network sepolia",
