--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "coverage": "npx hardhat coverage",
     "size": "npm run compile && npx hardhat size-contracts",
     "fetch": "ts-node utils/fetch-voters.ts",
+    "upgradeFrame:vault:sepolia": "npx hardhat run scripts/upgrade_reg_incentive_vault_frame.ts --network sepolia",
+    "upgradeFrame:vault:gnosis": "npx hardhat run scripts/upgrade_reg_incentive_vault_frame.ts --network gnosis",
     "register:sepolia": "npx hardhat run scripts/register_voters_incentive_vault.ts --network sepolia",
+    "register:gnosis": "npx hardhat run scripts/register_voters_incentive_vault.ts --network gnosis",
     "register:frame:sepolia": "npx hardhat run scripts/register_voters_incentive_vault_frame.ts --network sepolia",
-    "register-utils": "ts-node utils/register-voters.ts",
     "deployFrame:voting:sepolia": "npx hardhat run scripts/deploy_reg_voting_power_frame.ts --network sepolia",
     "deployFrame:timelock:sepolia": "npx hardhat run scripts/deploy_reg_treasury_dao_frame.ts --network sepolia",
     "deployFrame:governor:sepolia": "npx hardhat run scripts/deploy_reg_governor_frame.ts --network sepolia",
