docs: update docs

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,9 @@ ETHERSCAN_API_KEY=""
 GNOSISSCAN_API_KEY=""
 POLYGONSCAN_API_KEY=""
 
+# Set up address for the REGIncentiveVault
+REG_INCENTIVE_VAULT_ADDRESS=""
+
 # Set up parameters for the contracts
 # REGVotingPowerRegistry
 VOTING_DEFAULT_ADMIN=""
